--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ checkpoints/
 Deit_origional/custom-pytorch-image-models/
 Deit_origional/slurm-198563.out
 Deit_origional/slurm-198568.out
+custom-pytorch-image-models/
